--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
+    "d3-drag": "^1.2.1",
     "d3-force": "^1.1.0",
+    "d3-selection": "^1.3.0",
+    "d3-zoom": "^1.7.1",
     "ngx-mqtt": "^6.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
