--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.2",
-    "@angular/cdk": "^8.0.1",
-    "@angular/common": "~8.0.2",
-    "@angular/compiler": "~8.0.2",
-    "@angular/core": "~8.0.2",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/core": "^8.0.3",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.2",
-    "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "~8.0.2",
-    "@angular/platform-browser-dynamic": "~8.0.2",
-    "@angular/router": "~8.0.2",
-    "core-js": "^2.5.4",
-    "d3": "^5.7.0",
+    "@angular/forms": "^8.0.3",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/router": "^8.0.3",
+    "core-js": "^2.6.9",
+    "d3": "^5.9.7",
     "d3-drag": "^1.2.3",
-    "d3-force": "^1.1.2",
+    "d3-force": "^1.2.1",
     "d3-selection": "^1.3.2",
     "d3-zoom": "^1.7.3",
-    "ngx-mqtt": "^6.6.0",
+    "ngx-mqtt": "^6.11.0",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.4",
-    "@angular/compiler-cli": "^8.0.2",
-    "@angular/language-service": "~8.0.2",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.0.6",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/language-service": "^8.0.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
