--- a/package.json
+++ b/package.json
@@ -11,47 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
-    "@angular/cdk": "^8.0.2",
-    "@angular/common": "^8.0.3",
-    "@angular/compiler": "^8.0.3",
-    "@angular/core": "^8.0.3",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.0.3",
-    "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.0.3",
-    "@angular/platform-browser-dynamic": "^8.0.3",
-    "@angular/router": "^8.0.3",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.1.3",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
+    "@angular/forms": "~8.2.0",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
     "core-js": "^2.6.9",
     "d3": "^5.9.7",
     "d3-drag": "^1.2.3",
     "d3-force": "^1.2.1",
     "d3-selection": "^1.3.2",
     "d3-zoom": "^1.7.3",
-    "ngx-mqtt": "^6.11.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "ngx-mqtt": "^6.11.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.6",
-    "@angular/cli": "^8.0.6",
-    "@angular/compiler-cli": "^8.1.1",
-    "@angular/language-service": "^8.0.3",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.802.2",
+    "@angular/cli": "~8.2.2",
+    "@angular/compiler-cli": "~8.2.0",
+    "@angular/language-service": "~8.2.0",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   }
 }
