--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
     "core-js": "^2.6.9",
     "d3": "^5.9.7",
     "d3-drag": "^1.2.3",
     "d3-force": "^1.2.1",
     "d3-selection": "^1.3.2",
     "d3-zoom": "^1.7.3",
-    "ngx-mqtt": "^6.11.0"
+    "ngx-mqtt": "^6.11.0",
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
