--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fieldmon",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
+    "@angular/animations": "~10.0.9",
     "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
@@ -23,15 +23,14 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "buffer": "^5.6.0",
     "d3": "^5.16.0",
-    "d3-drag": "^1.2.5",
     "d3-force": "^2.0.1",
-    "d3-selection": "^1.4.2",
-    "d3-zoom": "^1.8.3",
     "ngx-mqtt": "^7.0.9",
-    "rxjs": "^6.6.2",
+    "process": "^0.11.10",
+    "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
@@ -40,7 +39,6 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@angular/language-service": "~10.0.9",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -50,8 +48,8 @@
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.5"
   }
 }
