--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "buffer": "^5.6.0",
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "ngx-mqtt": "^7.0.9",
     "process": "^0.11.10",
     "rxjs": "~6.5.5",
